1-kubernetes/all.yaml
apiVersion: v1
kind: Pod
metadata:
  name: parksmap-pod
  labels:
    app: parksmap
spec:
  containers:
    - name: parksmap-container
      image: quay.io/openshiftroadshow/parksmap:1.3.0
      imagePullPolicy: IfNotPresent
      resources:
        limits:
          cpu: '1'
          memory: 1000Mi
        requests:
          cpu: 10m
          memory: 64Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parksmap-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: parksmap-deployment
  template:
    metadata:
      labels:
        app: parksmap-deployment
    spec:
      containers:
        - name: parksmap-container
          image: quay.io/openshiftroadshow/parksmap:1.3.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "1"
              memory: 1000Mi
            requests:
              cpu: 10m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: parksmap-service
  labels:
    app: parksmap-deployment
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: parksmap-deployment
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: parksmap-ingress
 annotations:
   haproxy.router.openshift.io/rewrite-target: / 
spec:
 rules:
   - host: parksmap-jtibagan-dev.apps.sandbox-m4.g2pi.p1.openshiftapps.com
     http:
       paths:
         - path: /
           pathType: Prefix 
           backend:
             service:
                name: parksmap-service
                port:
                  number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parksmap-configs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parksmap-configs
  template:
    metadata:
      labels:
        app: parksmap-configs
    spec:
      containers:
        - name: parksmap-container
          image: quay.io/openshiftroadshow/parksmap:1.3.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "1"
              memory: 1000Mi
            requests:
              cpu: 10m
              memory: 64Mi
          volumeMounts:
            - name: configmap-files
              mountPath: /home/appuser/config
      volumes:
        - name: configmap-files
          configMap:
            name: app-configmap-files
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parksmap-pvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parksmap-pvc
  template:
    metadata:
      labels:
        app: parksmap-pvc
    spec:
      containers:
        - name: parksmap-container
          image: quay.io/openshiftroadshow/parksmap:1.3.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "1"
              memory: 1000Mi
            requests:
              cpu: 10m
              memory: 64Mi
          volumeMounts:
            - name: tmp-volume
              mountPath: /tmp/data
            - name: pvc-data
              mountPath: /mnt/data
      volumes:
        - name: tmp-volume
          emptyDir: { }
        - name: pvc-data
          persistentVolumeClaim:
            claimName: pvc-app
